# rag-legislacion

./: .gitignore  README.md  example.env  main.py  pyproject.toml
documentation/: borrador_tesis.md  index.md  llm.md  setup.md  vectorstore.md
llm/: llm_manager.py
vectorstore/: distance_strategy.py  document_processor.py  embeddings.py  vectorstore_manager.py
